// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add 1`] = `
Array [
  Array [
    "",
    Object {
      "name": "a",
      "newValue": 3,
      "object": null,
      "type": "add",
    },
  ],
]
`;

exports[`basic & dispose 1`] = `
Array [
  Array [
    "",
    Object {
      "name": "a",
      "newValue": 2,
      "object": Object {
        "a": 2,
        "b": Object {
          "z": 3,
          Symbol(mobx administration): null,
        },
        Symbol(mobx administration): null,
      },
      "oldValue": 1,
      "type": "update",
    },
  ],
  Array [
    "b",
    Object {
      "name": "z",
      "newValue": 4,
      "object": Object {
        "z": 4,
        Symbol(mobx administration): null,
      },
      "oldValue": 3,
      "type": "update",
    },
  ],
]
`;

exports[`cleanup 1`] = `
Array [
  Array [
    "a",
    Object {
      "name": "b",
      "newValue": 2,
      "object": Object {
        "b": 2,
        Symbol(mobx administration): null,
      },
      "oldValue": 1,
      "type": "update",
    },
  ],
  Array [
    "",
    Object {
      "name": "a",
      "object": Object {
        Symbol(mobx administration): null,
      },
      "oldValue": Object {
        "b": 2,
        Symbol(mobx administration): null,
      },
      "type": "remove",
    },
  ],
]
`;

exports[`deep 1`] = `
Array [
  Array [
    "a/b",
    Object {
      "name": "c",
      "newValue": 4,
      "object": null,
      "oldValue": 3,
      "type": "update",
    },
  ],
]
`;

exports[`delete 1`] = `
Array [
  Array [
    "",
    Object {
      "name": "x",
      "object": null,
      "oldValue": 1,
      "type": "remove",
    },
  ],
]
`;
